# island-ru

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/components/: entity.rs  mesh.rs  mod.rs  physics.rs  player.rs  shader.rs  texture.rs  tile.rs  worker.rs  world.rs
src/core/: buffers.rs  game_state.rs  mod.rs  shader.rs  texture.rs  texture_buffer.rs
src/resources/: fragment.glsl  vertex.glsl  vertex_world.glsl
src/resources/textures/: tiles-textures.kra
src/systems/: input.rs  interations.rs  mod.rs  physics.rs  render.rs
tools/: get_colors.py
