[package]
name = "island-ru"
version = "0.1.0"
authors = ["Cod3rkane <jcesar.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.39.0"
gl = "0.14.0"
nalgebra = "0.21.1"
nalgebra-glm = "0.7.0"
rand = "0.7.3"
slotmap = "0.4.0"
image = "0.23.8"
noise = "0.6.0"